fixed some spacing issues and increased font sizes to make more readable

--- a/main.css
+++ b/main.css
@@ -17,30 +17,34 @@ body {
 
 header {
   width: 100%;
-  margin: 40px 0;
+  margin: 60px 0;
   position: relative;
   font: 2em sans-serif;
 }
 
-header * {
-  display: inline-block;
+header h1 {
+  float: left;
+  /*position: absolute;
+  left: 0;*/
 }
 
 header div {
   font-size: .75em;
-  margin: 0 0 0 auto;
-  position: absolute;
+  margin: 30px 0 10px auto;
+  float: right;
+  /*position: absolute;
   right: 0;
-  top: 50%;
+  top: 50%;*/
 }
 
 header .fa {
-  font-size: .7em;
+  font-size: .8em;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Lora', serif;
   font-weight: bold;
+  font-size: 130%;
 }
 
 h4 {
@@ -48,7 +52,8 @@ h4 {
 }
 
 #content {
-  margin: 60px 0 0 0;
+  clear: both;
+  margin: 200px 0 0 0;
 }
 
 #entries {
@@ -59,6 +64,7 @@ h4 {
 
 .entry {
   margin: 0 0 40px 0;
+  font-size: 118%;
 }
 
 #contribute {
@@ -66,6 +72,7 @@ h4 {
   margin: 0 0 0 8%;
   display: inline-block;
   float: left;
+  font-size: 120%;
 }
 
 #contribute * {
@@ -85,6 +92,7 @@ h4 {
 .btn-default {
   width: 100%;
   background-color: #efefef;
+  font-size: 108%;
 }
 
 em, .pos {
